# Whirlaway

./: .gitignore  Cargo.toml
benches/: fold_benchmarks.rs  folding_benchmarks.rs  poseidon2_benchmark.rs  poseidon2_benchmarks.rs  sc_round_benchmarks.rs  sumcheck_timings.rs
crates/air/src/: lib.rs  prove.rs  table.rs  utils.rs  verify.rs
crates/sumcheck/src/: prove.rs  verify.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  multilinear.rs  univariate.rs
src/: main.rs
src/examples/: fibonacci.rs  mod.rs  poseidon2.rs
